--- a/experiments/cfgs/gans/fmnist.yml
+++ b/experiments/cfgs/gans/fmnist.yml
@@ -1,5 +1,5 @@
-DATASET_NAME: 'fmnist'
-ARCH_TYPE: 'fmnist'
+DATASET_NAME: 'f-mnist'
+ARCH_TYPE: 'f-mnist'
 MODE: 'wgan-gp'
 CRITIC_ITERS: 5
 REC_ITERS: 200
