--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 numpy==1.14.2
 scipy==1.0.1
-tensorflow-gpu==1.7.0
+requests==2.20.0
 keras==2.1.5
 opencv-python==3.4.0.12
 scikit-image==0.13.1
 matplotlib==2.1.2
+tqdm=4.28.1
